@@ -14,9 +14,9 @@ import ru.practicum.ViewStatsDto;
 import ru.practicum.constants.Constants;
 import ru.practicum.dao.EventRepository;
 import ru.practicum.dto.event.EventDto;
+import ru.practicum.dto.event.EventPublic;
 import ru.practicum.dto.event.EventShortDto;
 import ru.practicum.dto.event.State;
-import ru.practicum.exceptions.IncorrectParameterException;
 import ru.practicum.exceptions.NotFoundException;
 import ru.practicum.mapper.EventMapper;
 import ru.practicum.model.Event;
@@ -25,6 +25,7 @@ import ru.practicum.stats.StatsClient;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @ComponentScan
 @Service
@@ -34,35 +35,37 @@ public class PublicEventServiceImpl implements PublicEventService {
     private final StatsClient statsClient;
 
     @Override
-    public List<EventShortDto> getEvents(
-            LocalDateTime rangeStart, LocalDateTime rangeEnd, String text, List<Long> categories, Boolean paid,
-            Boolean onlyAvailable, String sort, Integer from, Integer size, HttpServletRequest request) {
+    public List<EventShortDto> getEvents(EventPublic eventPublic, HttpServletRequest request) {
+        LocalDateTime rangeStart = eventPublic.getRangeStart() != null ?
+                LocalDateTime.parse(eventPublic.getRangeStart(), DateTimeFormatter.ofPattern(Constants.DATE_PATTERN)) :
+                null;
+        LocalDateTime rangeEnd = eventPublic.getRangeEnd() != null ?
+                LocalDateTime.parse(eventPublic.getRangeEnd(), DateTimeFormatter.ofPattern(Constants.DATE_PATTERN)) :
+                null;
 
-        if (rangeStart != null && rangeEnd != null && rangeEnd.isBefore(rangeStart)) {
-            throw new IncorrectParameterException("Даты не могут быть равны или дата окончания не может быть раньше даты начала");
+        Sort sort = Sort.unsorted();
+        if (eventPublic.getSort() != null) {
+            String sortField = eventPublic.getSort().equals("EVENT_DATE") ? "eventDate" : "views";
+            sort = Sort.by(sortField).descending();
         }
 
-        Pageable pageable;
-        if (sort != null) {
-            String sortField = sort.equals("EVENT_DATE") ? "eventDate" : "views";
-            pageable = PageRequest.of(from / size, size, Sort.by(sortField).descending());
-        } else {
-            pageable = PageRequest.of(from / size, size);
-        }
-
+        Pageable pageable = PageRequest.of(eventPublic.getFrom() / eventPublic.getSize(),
+                eventPublic.getSize(), sort);
         List<Event> events;
         if (rangeEnd != null) {
             events = eventRepository.findAllPublishedEventsByFilterAndPeriod(
-                    text, categories, paid, rangeStart, rangeEnd, onlyAvailable, pageable);
+                    eventPublic.getText(), eventPublic.getCategories(), eventPublic.getPaid(),
+                    rangeStart, rangeEnd, eventPublic.getOnlyAvailable(), pageable);
         } else {
             events = eventRepository.findAllPublishedEventsByFilterAndRangeStart(
-                    text, categories, paid, rangeStart, onlyAvailable, pageable);
+                    eventPublic.getText(), eventPublic.getCategories(), eventPublic.getPaid(),
+                    rangeStart, eventPublic.getOnlyAvailable(), pageable);
         }
 
         statsClient.createHit(createEndpointHitDto(request));
         return events.stream()
                 .map(EventMapper::toEventShortDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -74,12 +77,15 @@ public class PublicEventServiceImpl implements PublicEventService {
             throw new NotFoundException("Можно смотреть только опубликованные события!");
         }
 
-        String start = event.getCreatedOn().withNano(0).format(DateTimeFormatter.ofPattern(Constants.DATE_PATTERN));
-        String end = event.getEventDate().withNano(0).format(DateTimeFormatter.ofPattern(Constants.DATE_PATTERN));
-        List<ViewStatsDto> viewStatsDtoList = statsClient.getStatsByDateAndUris(start, end, List.of(request.getRequestURI()), true);
+        String start = event.getCreatedOn().withNano(0).format(DateTimeFormatter
+                .ofPattern(Constants.DATE_PATTERN));
+        String end = event.getEventDate().withNano(0).format(DateTimeFormatter
+                .ofPattern(Constants.DATE_PATTERN));
+        List<ViewStatsDto> viewStatsDtoList = statsClient.getStatsByDateAndUris(start, end,
+                List.of(request.getRequestURI()), true);
 
         if (!viewStatsDtoList.isEmpty()) {
-            event.setViews(viewStatsDtoList.getFirst().getHits()); // Используем get(0) вместо getFirst()
+            event.setViews(viewStatsDtoList.getFirst().getHits());
         }
         statsClient.createHit(createEndpointHitDto(request));
         return EventMapper.toEventDto(event);
@@ -91,7 +97,8 @@ public class PublicEventServiceImpl implements PublicEventService {
                 .app("ewm-main-service")
                 .uri(request.getRequestURI())
                 .ip(request.getRemoteAddr())
-                .timestamp(LocalDateTime.now().withNano(0).format(DateTimeFormatter.ofPattern(Constants.DATE_PATTERN)))
+                .timestamp(LocalDateTime.now().withNano(0).format(DateTimeFormatter
+                        .ofPattern(Constants.DATE_PATTERN)))
                 .build();
     }
 }
